Fix Header: Navigation links were misaligned

--- a/src/components/molecules/Header/Header.scss
+++ b/src/components/molecules/Header/Header.scss
@@ -10,6 +10,8 @@
 		display: flex;
 	}
 	.header--link_group {
+		display: flex;
+		align-items: center;
 		* {
 			margin: 0 0.5rem;
 		}
